--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
         <li id="toSkills">SKILLS</li>
         <li id="toContact">CONTACT</li>
       </ul>
-      <div id="pictureMe"><span>BF</span></div>
+      <div id="logo"></div>
     </div>
     <div id="content">
       <article id="about" class="col-offset-mobile-1 col-mobile-10 col-offset-2 col-8">
