all deps done, started logo dev

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
   </head>
   <body>
     <div id="header">
+      <div id="canvasHeaderContainer"></div>
       <div id="headerImageContainer">
         <div id="headerImage"></div>
       </div>
@@ -27,7 +28,6 @@
         <li id="toSkills">SKILLS</li>
         <li id="toContact">CONTACT</li>
       </ul>
-      <div id="logo"></div>
     </div>
     <div id="content">
       <article id="about" class="col-offset-mobile-1 col-mobile-10 col-offset-2 col-8">
