--- a/static/css/style.css
+++ b/static/css/style.css
@@ -103,11 +103,10 @@ body {
   width: 7px;
 }
 
-#logo {
+#canvasHeaderContainer {
   position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translateY(-50%) translateX(-50%);
+  width: 100%;
+  height: 100%;
 }
 
 #pictureMe {
