--- a/templates/index.html
+++ b/templates/index.html
@@ -134,8 +134,8 @@
                 <p>October 2014 - Now</p>
               </div>
               <div class="entryContent">
-                I started my job at <a href="http://greyrook.com/" target="_blank">Greyrook Entertainment</a> for financial support while im at university,
-                it's a small but great team of software developers.
+                I began my job at <a href="http://greyrook.com/" target="_blank">Greyrook Entertainment</a> for financial support while I'm at university,
+                a small but great team of software developers.
                 From working there I've learned a lot about working in a team and development cycles in general.
               </div>
             </li>
@@ -146,7 +146,7 @@
               </div>
               <div class="entryContent">
                 One semester long <a href="http://sep.icb.uni-due.de/" target="_blank">software development project</a>:
-                As a team of six we were to create a Java application based on the requirements of a simulated client.
+                As a team of six we had to create a Java application based on the requirements of a simulated client.
                 Really interesting experience working with everyone on the same level.
               </div>
             </li>
