--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-@font-face {
+might @font-face {
   font-family: OpenSans;
   src: url('../font/OpenSans-Regular.ttf');
   font-weight: normal;
@@ -75,6 +75,8 @@ body {
   color: white;
   list-style-type: none;
   margin: 0;
+  position: relative;
+  z-index: 100;
 }
 
 .topNav li {
