fixed company name ;)

--- a/templates/index.html
+++ b/templates/index.html
@@ -134,7 +134,7 @@
                 <p>October 2014 - Now</p>
               </div>
               <div class="entryContent">
-                I began my job at <a href="http://greyrook.com/" target="_blank">Greyrook Entertainment</a> for financial support while I'm at university,
+                I began my job at <a href="http://greyrook.com/" target="_blank">Grey Rook</a> for financial support while I'm at university,
                 a small but great team of software developers.
                 From working there I've learned a lot about working in a team and development cycles in general.
               </div>
