--- a/templates/index.html
+++ b/templates/index.html
@@ -253,11 +253,11 @@
           <div class="spacer"></div>
 
           <div id="form" class="form col-12">
-            <div class="col-6 inputWithLabel">
+            <div class="col-6 col-mobile-12 inputWithLabel">
               <label for="formName"></label>
               <input id="formName" type="text" placeholder="*">
             </div>
-            <div class="col-6 inputWithLabel">
+            <div class="col-6 col-mobile-12 inputWithLabel">
               <label for="formEmail"></label>
               <input id="formEmail" type="text" placeholder="*">
             </div>
