--- a/templates/index.html
+++ b/templates/index.html
@@ -178,12 +178,11 @@
           </div>
           <div id="skillCircles">
             <div class="col-12 skillMostUsed">
-              I dislike having a scale of skill on a portfolio so these are my most liked.
-              (Disclaimer: Skill might correlate.)
+              A ranking of my favourite things to do:
             </div>
             <div class="col-md-4 col-6 col-mobile-12 skillCircle">
               <div class="skillName">
-                  Python
+                  JavaScript
               </div>
               <div class="circle">
                   <svg><path id="circle1_bg" /><path id="circle1" /></svg>
@@ -191,7 +190,7 @@
             </div>
             <div class="col-md-4 col-6 col-mobile-12 skillCircle">
               <div class="skillName">
-                  JavaScript
+                  Python
               </div>
               <div class="circle">
                   <svg>
@@ -200,7 +199,7 @@
             </div>
             <div class="col-md-4 col-6 col-mobile-12 skillCircle">
               <div class="skillName">
-                  Java
+                  C / C++
               </div>
               <div class="circle">
                   <svg><path id="circle3_bg" /><path id="circle3" /></svg>
@@ -208,7 +207,7 @@
             </div>
             <div class="col-md-4 col-6 col-mobile-12 skillCircle">
               <div class="skillName">
-                  SQL
+                  Java
               </div>
               <div class="circle">
                   <svg><path id="circle4_bg" /><path id="circle4" /></svg>
@@ -216,7 +215,7 @@
             </div>
             <div class="col-md-4 col-6 col-mobile-12 skillCircle">
               <div class="skillName">
-                  PHP
+                  Design
               </div>
               <div class="circle">
                   <svg><path id="circle5_bg" /><path id="circle5" /></svg>
@@ -224,7 +223,7 @@
             </div>
             <div class="col-md-4 col-6 col-mobile-12 skillCircle">
               <div class="skillName">
-                  Design
+                  PHP
               </div>
               <div class="circle">
                   <svg><path id="circle6_bg" /><path id="circle6" /></svg>
