--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,16 +56,11 @@ body {
   overflow: hidden;
   width: inherit;
   height: inherit;
+  background-color: #e0e5e8;
 }
 
 #headerImage {
-  background-image: url(../img/me_fixed.png);
-  background-position: 100% 100%;
-  height: inherit;
-  background-size: contain;
-  background-repeat: no-repeat;
-
-  background-color: #e0e5e8;
+  float: right;
 }
 
 .topNav {
@@ -271,7 +266,6 @@ article:last-child {
 
 .caption {
   margin: 50px 0;
-  background-image: url('../img/photo-spacer.jpg');
   width:100%;
   height: 300px;
   clear: both;
@@ -383,10 +377,6 @@ article:last-child {
   stroke-width: 10px;
   stroke-linejoin: round;
   stroke-linecap: round;
-}
-
-#contact.caption {
-    background-image: url('../img/mail.jpg');
 }
 
 .form {
@@ -513,7 +503,6 @@ article:last-child {
 }
 
 #footerImage {
-  background-image: url('../img/keyboard.jpg');
   height: inherit;
   background-size: cover;
   background-position: 0 -550px;
