--- a/static/css/style.css
+++ b/static/css/style.css
@@ -61,6 +61,7 @@ body {
 
 #headerImage {
   float: right;
+  height: inherit;
 }
 
 .topNav {
@@ -102,32 +103,6 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-}
-
-#pictureMe {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translateY(-50%) translateX(-50%);
-  border-radius: 100%;
-  width: 20%;
-  max-width: 300px;
-  border: 5px solid white;
-}
-
-#pictureMe:before{
-	content: "";
-	display: block;
-	padding-top: 100%;
-}
-
-#pictureMe span {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  color: white;
-  font-size: 14vh;
-  transform: translateY(-50%) translateX(-50%);
 }
 
 article {
@@ -326,8 +301,48 @@ article:last-child {
   background: #fff;
 }
 
-#skillCircles {
+#skillGraph {
   width: 100%;
+  height: 400px;
+  position: relative;
+}
+
+.skillCircle {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  cursor: default;
+
+  background-color: #3861b1;
+  width: 200px;
+  height: 200px;
+  text-align: center;
+  line-height: 200px;
+  border-radius: 100px;
+  color: white;
+  font-size:1.3em;
+  transform: scale(1);
+}
+
+.removeScale {
+  transform: scale(0) !important;
+}
+
+.animatedSkill {
+  transition: 0.5s transform;
+}
+
+.skillLarge {
+  transform: scale(1);
+}
+
+.skillMedium {
+  transform: scale(0.7);
+}
+
+.skillSmall {
+  transform: scale(0.5);
 }
 
 .skillText {
@@ -594,15 +609,6 @@ article:last-child {
 
   #header {
     height: 55vw;
-  }
-
-  #pictureMe {
-    width: 30%;
-    top: 50%;
-  }
-
-  #pictureMe span {
-    font-size: 10vh;
   }
 
   .topNav li {
