year is always updated

--- a/templates/index.html
+++ b/templates/index.html
@@ -253,7 +253,7 @@
         <div id="footerImage" style="background-image: url({{ static_url(images['keyboard']) }})"></div>
       </div>
       <div id="backTop">BACK UP</div>
-      <div class="cr">©Björn Friedrichs 2015</div>
+      <div class="cr">©Björn Friedrichs {{ now.year }}</div>
     </div>
 
     {% for js_url in js %}
