updated some text and fixed mobile skills

--- a/templates/index.html
+++ b/templates/index.html
@@ -96,22 +96,11 @@
             <div class="timeLine"></div>
             <li class="fadeIn fadeRight">
               <div class="entryHeader">
-                <p>LISE-MEITNER GYMNASIUM</p>
-                <p>August 2005 - March 2013</p>
-              </div>
-              <div class="entryContent">
-                First year of G8 students (twelve instead of thirteen years of school),
-                schools weren't completely adapted yet which caused a bit of trouble in the early years.
-                Taking maths and computer science as advanced courses was an easy choice and made the rest more bearable.
-              </div>
-            </li>
-            <li class="fadeIn fadeLeft">
-              <div class="entryHeader">
                 <p>UNIVERSITY OF DUISBURG-ESSEN</p>
                 <p>October 2013 - Now</p>
               </div>
               <div class="entryContent">
-                After school it was obvious for me I was going to pursue computer science.
+                After school it was obvious for me: I was going to pursue computer science.
                 I enrolled for my <a href="https://www.uni-due.de/de/studium/angebot.php?id=1" target="_blank">bachelor degree course</a>,
                 because it not solely teaches about development but also business studies and
                 how to manage a project.
@@ -138,7 +127,7 @@
               <div class="entryContent">
                 I began my job at <a href="http://greyrook.com/" target="_blank">Grey Rook</a> for financial support while I'm at university,
                 a small but great team of software developers.
-                From working there I've learned a lot about working in a team and development cycles in general.
+                From working there I've learned a lot about working in a team and how to structure a development project properly.
               </div>
             </li>
             <li class="fadeIn fadeLeft">
@@ -148,11 +137,21 @@
               </div>
               <div class="entryContent">
                 One semester long <a href="http://sep.icb.uni-due.de/" target="_blank">software development project</a>:
-                As a team of six we had to create a Java application based on the requirements of a simulated client.
+                As a team of six we created a Java application based on the requirements of a simulated client.
                 Really interesting experience working with everyone on the same level.
               </div>
             </li>
             <li class="fadeIn fadeRight">
+              <div class="entryHeader">
+                <p>Fliegenklappe</p>
+                <p>2016</p>
+              </div>
+              <div class="entryContent">
+                Implementation of a dynamic website for <a href="http://zentrum-zehn.de/kunst-und-kultur/die-kreativen/sascha-doerger.html" target="_blank">Sascha Dörger's</a> idea of a Fliegenklappe.
+                <a href="http://www.fliegenklappe.de/" target="_blank">Fliegenklappe.de</a> is a website about his decorative and useful reimagination of a flyswatter.
+              </div>
+            </li>
+            <li class="fadeIn fadeLeft">
               <div class="entryHeader">
                 <p>VARIOUS PROJECTS</p>
                 <p>-</p>
