--- a/static/css/style.css
+++ b/static/css/style.css
@@ -357,41 +357,10 @@ article:last-child {
   margin-bottom: 40px;
 }
 
-.circle {
-  fill: none;;
-  stroke: #646464;
-  stroke-width: 10px;
-  stroke-linejoin: round;
-  stroke-linecap: round;
-}
-
 .skillName {
   width: 95%;
   text-align: center;
   font-weight: 100;
-}
-
-.circle>svg {
-  display: block;
-  margin: 0 auto;
-  width: 180px;
-  height: 180px;
-}
-
-.circle path:first-child {
-  fill: none;
-  stroke: #dadada;
-  stroke-width: 10px;
-  stroke-linejoin: round;
-  stroke-linecap: round;
-}
-
-.circle path {
-  fill: none;
-  stroke: #3861b1;
-  stroke-width: 10px;
-  stroke-linejoin: round;
-  stroke-linecap: round;
 }
 
 .form {
@@ -626,6 +595,13 @@ article:last-child {
 
   #sendButton {
     width: 100%;
+  }
+
+  .skillCircle {
+    width: 100px;
+    height: 100px;
+    line-height: 100px;
+    font-size: 0.8em;
   }
 }
 
