--- a/templates/index.html
+++ b/templates/index.html
@@ -191,6 +191,7 @@
             <div class="skillCircle skillLarge">Java</div>
             <div class="skillCircle skillMedium">PHP</div>
             <div class="skillCircle skillLarge">CSS</div>
+            <div class="skillCircle skillSmall">Swift</div>
           </div>
         </div>
       </article>
