--- a/templates/index.html
+++ b/templates/index.html
@@ -103,7 +103,18 @@
 
           <ul class="fancyList">
             <div class="timeLine"></div>
-            <li class="fadeIn fadeRight">
+            <li class="fadeIn">
+              <div class="entryHeader">
+                <p>LISE-MEITNER GYMNASIUM</p>
+                <p>August 2005 - March 2013</p>
+              </div>
+              <div class="entryContent">
+                First year of G8 students (twelve instead of thirteen years of school),
+                schools weren't completely adapted yet which caused a bit of trouble in the early years.
+                Taking maths and computer science as advanced courses was an easy choice they supported my personal interests.
+              </div>
+            </li>
+            <li class="fadeIn">
               <div class="entryHeader">
                 <p>UNIVERSITY OF DUISBURG-ESSEN</p>
                 <p>October 2013 - Now</p>
@@ -128,9 +139,9 @@
 
           <ul class="fancyList white">
             <div class="timeLine"></div>
-            <li class="fadeIn fadeRight">
+            <li class="fadeIn">
               <div class="entryHeader">
-                <p>FRONT END DEVELOPMENT</p>
+                <p>SOFTWARE DEVELOPER</p>
                 <p>October 2014 - Now</p>
               </div>
               <div class="entryContent">
@@ -139,7 +150,7 @@
                 From working there I've learned a lot about working in a team and how to structure a development project properly.
               </div>
             </li>
-            <li class="fadeIn fadeLeft">
+            <li class="fadeIn">
               <div class="entryHeader">
                 <p>SOFTWARE DEVELOPMENT PROJECT</p>
                 <p>March 2015 - August 2015</p>
@@ -150,24 +161,45 @@
                 Really interesting experience working with everyone on the same level.
               </div>
             </li>
-            <li class="fadeIn fadeRight">
+            <li class="fadeIn">
               <div class="entryHeader">
                 <p>Fliegenklappe</p>
-                <p>2016</p>
+                <p>December 2016</p>
               </div>
               <div class="entryContent">
                 Implementation of a dynamic website for <a href="http://zentrum-zehn.de/kunst-und-kultur/die-kreativen/sascha-doerger.html" target="_blank">Sascha Dörger's</a> idea of a Fliegenklappe.
                 <a href="http://www.fliegenklappe.de/" target="_blank">Fliegenklappe.de</a> is a website about his decorative and useful reimagination of a flyswatter.
               </div>
             </li>
-            <li class="fadeIn fadeLeft">
+            <li class="fadeIn">
               <div class="entryHeader">
-                <p>VARIOUS PROJECTS</p>
-                <p>-</p>
+                <p>Insquared App</p>
+                <p>August 2017</p>
               </div>
               <div class="entryContent">
-                During my free time I like to work on smaller scaled, (mostly) personal projects to get a grasp of how things work.
-                Including OpenGl (WebGl), general C and C++, Android, and various others.
+                Programmed and released a game written in Swift on the Apple AppStore.
+                <a href="https://itunes.apple.com/us/app/insquared/id1233726230?mt=8">Insquared</a> is a beat-the-highscore game that allows you to connect to your friends via Facebook.
+              </div>
+            </li>
+            <li class="fadeIn">
+              <div class="entryHeader">
+                <p>pr0gramm App</p>
+                <p>June 2017</p>
+              </div>
+              <div class="entryContent">
+                Worked on a Swift client for the German image-board <a href="https://pr0gramm.com">pr0gramm</a>.
+                I never published it since some of the images violate the AppStores TOS, however it is public on <a href="https://github.com/BFriedrichs/pr0gramm-swift">GitHub</a>.
+              </div>
+            </li>
+            <li class="fadeIn">
+              <div class="entryHeader">
+                <p>Shoptastic App</p>
+                <p>September 2017</p>
+              </div>
+              <div class="entryContent">
+                Released a cross-platform React Native App which enhances daily life by providing an adjustable shopping list.
+                <br /><a href="https://itunes.apple.com/gb/app/shoptastic/id1299571442?mt=8">AppStore</a>
+                <br /><a href="https://play.google.com/store/apps/details?id=de.bjoernfriedrichs.shoptastic">Google Play Store</a>
               </div>
             </li>
           </ul>
@@ -190,8 +222,8 @@
             <div class="skillCircle skillSmall">C / C++</div>
             <div class="skillCircle skillLarge">Java</div>
             <div class="skillCircle skillMedium">PHP</div>
-            <div class="skillCircle skillLarge">CSS</div>
-            <div class="skillCircle skillSmall">Swift</div>
+            <div class="skillCircle skillMedium">CSS</div>
+            <div class="skillCircle skillMedium">Swift</div>
           </div>
         </div>
       </article>
