--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-might @font-face {
+@font-face {
   font-family: OpenSans;
   src: url('../font/OpenSans-Regular.ttf');
   font-weight: normal;
@@ -59,21 +59,45 @@ body {
   background-color: #e0e5e8;
 }
 
+#topBar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 100;
+}
+
+#canvasHeaderContainer {
+  height: 100%;
+  min-height: 100px;
+}
+
+#topNav {
+  margin-left: -1px;
+  float: right;
+  color: white;
+  list-style-type: none;
+  margin: 0;
+  position: absolute;
+  top: 0;
+  width: 595px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 0 0 20px 20px;
+  background: radial-gradient(28px 26px at 50% 100%, transparent, transparent 96%, rgba(0,0,0,0.3) 100%);
+  transition: all .5s;
+}
+
+#topNav:hover {
+  background: radial-gradient(28px 26px at 50% 100%, transparent, transparent 96%, rgba(0,0,0,0.55) 100%);
+}
+
 #headerImage {
   float: right;
   height: inherit;
 }
 
-.topNav {
-  float: right;
-  color: white;
-  list-style-type: none;
-  margin: 0;
-  position: relative;
-  z-index: 100;
-}
-
-.topNav li {
+#topNav li {
   float: left;
   margin: 10px 30px;
   font-weight: bold;
@@ -82,7 +106,15 @@ body {
   cursor: pointer;
 }
 
-.topNav li::before, .topNav li::after {
+#topNav li:nth-child(3) {
+  margin-left: 80px;
+}
+
+#topNav li:nth-child(3):hover {
+  margin-left: 73px !important;
+}
+
+#topNav li::before, #topNav li::after {
   display: inline-block;
   width: 0;
   overflow: hidden;
@@ -91,18 +123,12 @@ body {
   transition: all .3s;
 }
 
-.topNav li:hover {
-    margin: 10px 23px;
+#topNav li:hover {
+  margin: 10px 23px;
 }
 
-.topNav li:hover::before, .topNav li:hover::after {
+#topNav li:hover::before, #topNav li:hover::after {
   width: 7px;
-}
-
-#canvasHeaderContainer {
-  position: absolute;
-  width: 100%;
-  height: 100%;
 }
 
 article {
@@ -602,6 +628,46 @@ article:last-child {
     height: 100px;
     line-height: 100px;
     font-size: 0.8em;
+  }
+}
+
+@media(max-width: 768px) {
+  #topNav {
+    width: 250px;
+  }
+
+  #topNav li:nth-child(3) {
+    margin-left: 55px;
+  }
+
+  #topNav li:nth-child(3):hover {
+    margin-left: 55px !important;
+  }
+
+  #topNav li {
+      float: left;
+      margin: 17px 6px;
+      font-weight: bold;
+      font-size: 0.7em;
+      transition: all .3s;
+      cursor: pointer;
+  }
+  
+  #topNav li::before, #topNav li::after {
+    display: inline-block;
+    width: 0;
+    overflow: hidden;
+    line-height: 0.9em;
+    content: '';
+    transition: all .3s;
+  }
+  
+  #topNav li:hover {
+    margin: 17px 6px;
+  }
+  
+  #topNav li:hover::before, #topNav li:hover::after {
+    width: 0px;
   }
 }
 
